store id redis by songname

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   
 
   <form>
-  	<input type="text" name="name" placeholder="group" id="field1"></input><label for="field1">Group</label><br>
+  	<input type="text" name="name" placeholder="name" id="field1"></input><label for="field1">Group</label><br>
   	<input type="text" name="song" placeholder="song" id="field2"></input><label for="field2">Song</label><br>
   	<input type="submit">
   </form>	
