--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
   
 
   <form>
-  	<input type="text" name="name" placeholder="name" id="field1"></input><label for="field1">Artist</label><br>
-  	<input type="text" name="song" placeholder="song" id="field2"></input><label for="field2">Song</label><br>
+  	<label for="field1">Artist</label><input type="text" name="name" placeholder="name" id="field1"></input><br>
+  	<label for="field2">Song</label><input type="text" name="song" placeholder="song" id="field2"></input><br>
   	<input type="submit">
   </form>	
 
